--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,4 @@ services:
     volumes:
       - .:/app
     command:
-      sh -c "npm install && npm run dev"
+      sh -c "npm ci && npm run dev"
