--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: React-Redux CI
+name: React-Redux CI/CD
 
 on:
   push:
@@ -7,12 +7,12 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    
+
     - name: Use Node.js 20
       uses: actions/setup-node@v2
       with:
@@ -23,3 +23,10 @@ jobs:
 
     - name: Build
       run: npm run build
+
+    - name: Deploy to GitHub Pages
+      uses: JamesIves/github-pages-deploy-action@4.1.4
+      with:
+        branch: gh-pages  # The branch the action should deploy to.
+        folder: build  # The folder the action should deploy.
+        token: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for authentication.
