--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,5 +31,5 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@4.1.4
       with:
         branch: gh-pages  # The branch you are deploying to
-        folder: build  # The folder the action should deploy
+        folder: dist  # The folder the action should deploy
         token: ${{ secrets.GITHUB_TOKEN }}
