--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,26 +7,41 @@ on:
     branches: [ master ]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
+    outputs:
+      dist: ${{ steps.build.outputs.dist }}
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Use Node.js 20
+    - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
         node-version: '20'
+        cache: 'npm'
 
     - name: Install dependencies
       run: npm install
 
     - name: Build
+      id: build
       run: npm run build
+
+    - name: Save build output
+      id: save_output
+      run: echo "::set-output name=dist::$(realpath dist)"
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Checkout repo
+      uses: actions/checkout@v2
 
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@4.1.4
       with:
-        branch: gh-pages  # The branch the action should deploy to.
-        folder: dist  # The folder the action should deploy.
-        token: ${{ secrets.GITHUB_TOKEN }} 
+        branch: gh-pages
+        folder: ${{ needs.build.outputs.dist }}
+        token: ${{ secrets.GITHUB_TOKEN }}
