--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,12 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Lint
+      run: npm run lint
+
+    - name: Run tests
+      run: npm test
+
     - name: Build
       run: npm run build
 
@@ -31,20 +37,20 @@ jobs:
       id: save_output
       run: echo "dist=$(realpath dist)" >> $GITHUB_ENV
 
-    - name: Export output
-      id: output
-      run: echo "::set-output name=dist::$GITHUB_ENV"
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
+
     steps:
     - name: Checkout repo
       uses: actions/checkout@v2
+
+    - name: Set up environment
+      run: echo "dist=${{ needs.build.outputs.dist }}" >> $GITHUB_ENV
 
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@4.1.4
       with:
         branch: gh-pages
-        folder: ${{ needs.build.outputs.dist }}
+        folder: ${{ env.dist }}
         token: ${{ secrets.GITHUB_TOKEN }}
