--- a/.github/workflows/ci-cd-action.yml
+++ b/.github/workflows/ci-cd-action.yml
@@ -15,25 +15,26 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '20'
-        cache: 'npm'
+    - name: Build Docker Image
+      run: docker build -t react-redux-app .
 
-    - name: Install dependencies
-      run: npm install
+    - name: Run Docker Container
+      run: docker run --name react-redux-container react-redux-app
 
-    - name: Build
-      run: npm run build
+    - name: Copy Build Output
+      run: docker cp react-redux-container:/app/dist .
 
-    - name: Save build output
+    - name: Save Build Output
       id: save_output
       run: echo "dist=$(realpath dist)" >> $GITHUB_ENV
+
+    - name: Cleanup
+      run: docker rm -f react-redux-container
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
+
     steps:
     - name: Checkout repo
       uses: actions/checkout@v2
