--- a/.github/workflows/ci-cd-action.yml
+++ b/.github/workflows/ci-cd-action.yml
@@ -39,5 +39,5 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@4.1.4
       with:
         branch: gh-pages
-        folder: ${{ needs.build.outputs.dist }}
+        folder: ${{ needs.build.outputs.save_output }}
         token: ${{ secrets.GITHUB_TOKEN }}
