--- a/.github/workflows/ci-cd-action.yml
+++ b/.github/workflows/ci-cd-action.yml
@@ -25,6 +25,8 @@ jobs:
       id: save_output
       run: echo "dist=./dist" >> $GITHUB_ENV
 
+    - name: Verify Build Output
+      run: ls -las ./dist
 
     - name: Cleanup
       run: docker rm -f react-redux-container
