--- a/.github/workflows/ci-cd-action.yml
+++ b/.github/workflows/ci-cd-action.yml
@@ -21,9 +21,12 @@ jobs:
     - name: Copy Build Output
       run: docker cp react-redux-container:/app/dist .
 
-    - name: Save Build Output
-      id: save_output
-      run: echo "dist=./dist" >> $GITHUB_ENV
+    - name: Save output
+      run: |
+        {
+          echo "dist=$PWD/dist"
+          ls -las ./dist
+        } >> $GITHUB_ENV
 
     - name: Verify Build Output
       run: ls -las ./dist
