--- a/.github/workflows/ci-cd-action.yml
+++ b/.github/workflows/ci-cd-action.yml
@@ -44,6 +44,9 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: dist
+
+    - name: Verify Build Output
+      run: ls -las ./dist
     
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@3.7.1
