--- a/.github/workflows/ci-cd-action.yml
+++ b/.github/workflows/ci-cd-action.yml
@@ -48,6 +48,9 @@ jobs:
 
     - name: Verify Build Output
       run: ls -las ./dist
+
+    - name: Check index.html
+      run: cat ./dist/index.html
     
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@3.7.1
