--- a/.github/workflows/ci-cd-action.yml
+++ b/.github/workflows/ci-cd-action.yml
@@ -2,53 +2,64 @@ name: React-Redux CI/CD
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - name: Checkout Code
+        uses: actions/checkout@v2
 
-    - name: Build Docker Image
-      run: docker build -t react-redux-app .
+      - name: Build Docker Image
+        run: docker build -t react-redux-app .
 
-    - name: Run Docker Container
-      run: docker run --name react-redux-container react-redux-app
+      - name: Run Docker Container
+        run: docker run --name react-redux-container react-redux-app
 
-    - name: Copy Build Output
-      run: docker cp react-redux-container:/app/dist .
+      - name: Copy Build Output
+        run: docker cp react-redux-container:/app/dist .
 
-    - name: Upload Build Output
-      uses: actions/upload-artifact@v2
-      with:
-        name: dist
-        path: dist
+      - name: Upload Build Output
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: dist
 
-    - name: Verify Build Output
-      run: ls -las ./dist
+      - name: Verify Build Output
+        run: ls -las ./dist
 
-    - name: Cleanup
-      run: docker rm -f react-redux-container
+      - name: Cleanup
+        run: docker rm -f react-redux-container
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v2
+      - name: Checkout Repo
+        uses: actions/checkout@v2
 
-    - name: Download Build Output
-      uses: actions/download-artifact@v2
-      with:
-        name: dist
-        path: dist
+      - name: Download Build Output
+        uses: actions/download-artifact@v2
+        with:
+          name: dist
+          path: dist
 
-    - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@3.7.1
-      with:
-        ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: dist
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload Pages Artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: 'dist'
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
