--- a/.github/workflows/ci-cd-action.yml
+++ b/.github/workflows/ci-cd-action.yml
@@ -26,16 +26,18 @@ jobs:
       - name: Login to Docker Registry
         uses: azure/docker-login@v2
         with:
-          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+          registry: ${{ secrets.REGISTRY_LOGIN_SERVER }}
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
+      - name: Verify DNS resolution
+        run: nslookup ${{ secrets.REGISTRY_LOGIN_SERVER }}
+
       - name: Build Docker Image
-        run: |
-          docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/react-redux-app:${{ github.sha }} .
-          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/react-redux-app:${{ github.sha }}
+        run: docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/react-redux-app:${{ github.sha }} .
 
-
+      - name: Push Docker Image
+        run: docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/react-redux-app:${{ github.sha }}
 
   deploy:
     runs-on: ubuntu-latest
